--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,44 @@
 * {
     box-sizing: border-box;
-  }
+}
   
-  body {
+
+h1{
+    color: salmon;
+    text-align: center;
+}
+
+
+body {
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  /* Style the header */
-  .header {
-    background-color: #f1f1f1;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-  }
-  
-  /* Container for flexboxes */
-  .row {
-    display: -webkit-flex;
-    display: flex;
-  }
-  
-  /* Create three unequal columns that sits next to each other */
-  .column {
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
-  }
-  
-  /* Left and right column */
-  .column.side {
-     -webkit-flex: 1;
-     -ms-flex: 1;
-     flex: 1;
-  }
-  
-  /* Middle column */
-  .column.middle {
-    -webkit-flex: 2;
-    -ms-flex: 2;
-    flex: 2;
-  }
-  
-  /* Style the footer */
-  .footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media (max-width: 600px) {
-    .row {
-      -webkit-flex-direction: column;
-      flex-direction: column;
-    }
-  }
+}
+
+.sidenav {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 70px;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+}
+
+
+.sidenav a {
+    color: white;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.sidenav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.content {
+    margin-left: 200px;
+    padding-left: 20px;
+}
