--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,10 @@ body {
 
 .sidenav {
     height: 100%;
-    width: 200px;
+    width: 180px;
     position: fixed;
     z-index: 1;
-    top: 70px;
+    top: 75px;
     left: 0;
     background-color: #111;
     overflow-x: hidden;
@@ -46,16 +46,30 @@ body {
 }
 
 .post-feed {
-    max-width: 600px;
+    max-width: 900px;
     margin: 0 auto;
     padding: 20px;
 }
 
 .post {
+    display: flex;
+    align-items: flex-start;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     background-color: #fff;
     padding: 10px;
+}
+
+.post-content {
+    flex: 1; /* Let it grow to fill available space */
+}
+
+.user-profile {
+    flex: 0 0 auto; 
+    width: 50px; 
+    height: 50px; 
+    border-radius: 50%; 
+    margin-right: 10px; 
 }
 
 .post h2 {
@@ -63,15 +77,18 @@ body {
     margin-bottom: 10px;
 }
 
-.post p {
-    font-size: 16px;
-    line-height: 1.5;
-}
-
 .post .metadata {
     font-size: 14px;
     color: #888;
 }
+
+.post img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 10px 0;
+}
+
 
 .navbar {
     background-color: #333;
@@ -79,7 +96,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px 20px;
 }
 
 .logo {
