--- a/css/profile-styles.css
+++ b/css/profile-styles.css
@@ -12,6 +12,7 @@ h1 {
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #f0f0f0;
 }
 
 .profile-page {
@@ -49,6 +50,7 @@ body {
     margin-bottom: 20px;
     border: 1px solid #ccc;
     background-color: #fff;
+    border: 2px solid #C9656A; 
     padding: 10px;
 }
 
@@ -90,4 +92,78 @@ body {
     .left-section, .middle-section, .right-section {
         width: 100%;
     }
+}
+
+.navbar {
+    background-color: #C9656A;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    padding: 5px 20px;
+}
+
+.logo {
+    font-size: 30px;
+    font-weight: bold;
+    font-family: "monaco";
+    color: #C9656A;
+    margin-right: 0px;
+    margin-left: 200px;
+}
+
+
+.search-bar {
+    flex-grow: 1;
+    margin-left: 20px;
+    max-width: 400px;
+    margin-right: 800px;
+}
+
+
+/*.search-bar input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+}
+*/
+.search-bar input[type="text"] {
+    width: 300px; 
+    padding: 8px; 
+    border: 1px solid #ccc; 
+    border-radius: 3px; 
+    background-image: 'assets/search.png'; /* add a search icon.. not working atm */
+    background-position: 10px center; 
+    background-repeat: no-repeat;
+    padding-left: 30px; 
+    margin-right: 10px;
+}
+
+.search-bar input[type="text"]::before {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-image: 'assets/search.png'; /* icon needed */
+    background-size: 16px 16px; 
+    margin-right: 10px; 
+}
+
+.profile-link {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.profile-icon {
+    margin-left: 10px; 
+}
+
+.profile-icon img {
+    width: 24px; 
+    height: 24px;
+    border-radius: 50%; 
+    border: 1px solid #fff;
 }
