--- a/css/feed-styles.css
+++ b/css/feed-styles.css
@@ -4,7 +4,9 @@
   
 
 h1{
-    margin: 0 auto;
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 3%;
     padding: 10px;
     font-family: "Trebuchet MS";
     text-align: center;
@@ -14,8 +16,7 @@ h1{
 
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Ubuntu', sans-serif;
 
 }
 
@@ -56,27 +57,45 @@ body {
     margin: 20px auto;
     display: block;
 }
-
+/*
 .content {
     margin-left: 200px;
     padding-left: 20px;
 }
+*/
 
-.post-feed {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
-    margin-right: 450px;
-    background-color: rgba(211, 211, 211, 0.445);
-}
-
-.post {
+.post{
+    background: rgb(248, 218, 184);
     display: flex;
     align-items: flex-start;
-    margin-bottom: 20px;
-    border: 2px solid #C9656A; 
-    background-color: #fff;
-    padding: 15px; 
+    border-radius: 15px;
+}
+
+.post-feed {
+    max-width: 50%; 
+    margin: 0 auto; 
+    padding: 20px;
+    margin-right: 450px;
+}
+
+.stamp {
+    width: 860px;
+    display: inline-block;
+    padding: 10px;
+    position: relative;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.218));
+    background: radial-gradient(
+        transparent 0px, 
+        transparent 4px, 
+        #102651 4px,
+        #102651
+    );
+    background-size: 20px 20px;
+    background-position: -10px -10px;
+}
+
+.stamp + .stamp{
+    margin-top: 5%;
 }
 
 .post-content {
@@ -109,12 +128,13 @@ body {
 }
 
 
-.navbar {
-    background-color: #C9656A;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    padding: 5px 20px;
+.navbar{
+    position: relative;
+    margin-top: 0%;
+    margin-bottom: 2%;
+    width: 100%;
+    background-color: #50505038;
+    overflow: visible;
 }
 
 .logo {
@@ -177,8 +197,8 @@ body {
 }
 
 .profile-icon img {
-    width: 24px; 
-    height: 24px;
+    width: 40px; 
+    height: 40px;
     border-radius: 50%; 
     border: 1px solid #fff;
 }
