pretty sure this is consistent

--- a/css/checkIn-styles.css
+++ b/css/checkIn-styles.css
@@ -112,7 +112,7 @@ textarea{
 }
 
 button{
-    background-color: green;
+    background-color: #98C794;
     color: #fff;
     padding: 10px 15px;
     border: none;
@@ -127,7 +127,7 @@ button{
 }
 
 button:hover{
-    background-color: lightgreen;
+    background-color: #7faa74;
 }
 
 .save-order{
