--- a/css/friends-list.css
+++ b/css/friends-list.css
@@ -8,13 +8,10 @@
     font-weight: bold;
 }
 
-.post p{
-    text-align: center;
-}
 
 .tablink {
-    background-color: #e8dcd0; 
-    color: #595959; 
+    background-color: #8a8aad; 
+    color: white; 
     float: left;
     border: none;
     outline: none;
@@ -26,7 +23,8 @@
 }
 
 .tablink:hover {
-    background-color: #f7ede2; 
+    background-color: #55566C; 
+    color: white;
 }
 
 .tabcontent {
@@ -37,8 +35,8 @@
 }
 
 .active-tab {
-    background-color: #f2d5d0; 
-    color: #595959; 
+    background-color: #55566C; 
+    color: white; 
 }
 
 .tabs {
