--- a/css/login.css
+++ b/css/login.css
@@ -1,13 +1,11 @@
 .container {
     padding: 16px;
-    background-color: #f4f4f4;
     display: block;
     text-align: center;
   }
   .signin{
     display: inline-block;
     padding: 16px;
-    background-color: #f4f4f4;
     width: 300px;
     height: 300px;
     vertical-align: middle;
@@ -28,7 +26,7 @@
     box-sizing: border-box;
   }
   button{
-    background-color: green;
+    background-color: #98C794;
     color: #fff;
     padding: 10px 40px;
     border: none;
@@ -44,7 +42,7 @@
 }
 
 button:hover{
-    background-color: lightgreen;
+    background-color: #7faa74;
 }
 
 .vertical-line{
