--- a/css/checkIn-styles.css
+++ b/css/checkIn-styles.css
@@ -111,7 +111,7 @@ textarea{
     color: gold;
 }
 
-button{
+/* button{
     background-color: #98C794;
     color: #fff;
     padding: 10px 15px;
@@ -128,7 +128,7 @@ button{
 
 button:hover{
     background-color: #7faa74;
-}
+} */
 
 .save-order{
     display: flex;
