--- a/css/profile-styles.css
+++ b/css/profile-styles.css
@@ -94,13 +94,13 @@ body {
     }
 }
 
-.navbar {
+/* .navbar {
     background-color: #C9656A;
     color: #fff;
     display: flex;
     align-items: center;
     padding: 5px 20px;
-}
+} */
 
 .logo {
     font-size: 30px;
@@ -167,8 +167,8 @@ body {
     margin-right: 10px; 
 } */
 
-.search-bar {
-    position: relative; /* Ensure relative positioning for absolute child */
+/* .search-bar {
+    position: relative; 
 }
 
 #searchInput {
@@ -176,33 +176,33 @@ body {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 3px;
-    background-image: url('assets/search.png'); /* Use url() for background-image */
+    background-image: url('assets/search.png'); 
     background-position: 10px center;
     background-repeat: no-repeat;
     padding-left: 30px;
     margin-right: 10px;
-    box-sizing: border-box; /* Include padding and border in the width */
+    box-sizing: border-box; 
 }
 
 .search-results {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 300px; /* Adjust the width as needed */
+    width: 300px; 
     border: 1px solid #ccc;
     background-color: #fff;
     list-style: none;
     margin: 0;
     padding: 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-    border-radius: 3px; /* Add rounded corners */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    border-radius: 3px; 
 }
 
 .search-results li {
     padding: 8px;
     cursor: pointer;
-    display: flex; /* Align icon and text in a row */
-    align-items: center; /* Center vertically */
+    display: flex; 
+    align-items: center; 
 }
 
 .search-results li:hover {
@@ -210,11 +210,11 @@ body {
 }
 
 .search-results img {
-    width: 24px; /* Adjust the size of the profile icon */
+    width: 24px; 
     height: 24px;
     margin-right: 8px;
-    border-radius: 50%; /* Create a circular profile icon */
-}
+    border-radius: 50%; 
+} */
 
 
 
