suggestion box styled

--- a/css/checkIn-styles.css
+++ b/css/checkIn-styles.css
@@ -148,8 +148,13 @@ h2{
     justify-content: center;
 }
 
-.suggestions{
-
+.suggestions-box{
+    position: relative;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 150px;
+    margin-left: 1%;
 }
 
 .suggestion-item{
